# rust_simple_http_server

./: Cargo.toml  README.md  build.rs
resources/: icon.rc
src/: lib.rs  main.rs
