[package]
name = "https_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
regex = "1.11.0"
lazy_static = "1.5.0"
urlencoding = "2.1.3"

[build-dependencies]
embed-resource = "2.5"